Archive2/da/a0710d3a5c9ec0/output
main.cpp:5:23: error: 'bind<R ...>' in namespace 'std' does not name a type
     using bind = std::bind<R...>;
                       ^
